Cleaned up markup

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 		<![endif]-->
 	</head>
 	<body>
-		<section class="example rightExample clearfix">
-			<article class="example">
+		<section class="example example-right">
+			<article>
 				<h2>Tile Based Image Viewer</h2>
 				<p>This tile-based image viewer loads only the parts of the image that are visible. Not unlike how Google Maps loads map tiles.</p>
 				<p>This demo comes with a web service to divide large images into tiles using PHP, but the concept is easily replicated in other languages.</p>
 				<p><a class="button downloadButton" href="http://www.woollymittens.nl/downloads/viewer.zip" target="_blank">Download</a></p>
 			</article>
-			<aside class="example">
+			<aside>
 
 				<!-- Cut below this -->
 				<style>@import url("./css/viewer.css")</style>
@@ -75,11 +75,11 @@
 
 			</aside>
 		</section>
-		<section class="example leftExample clearfix">
-			<article class="example">
+		<section class="example example-left">
+			<article>
 				<p>This example allows frames of a rotation to be dragged around.</p>
 			</article>
-			<aside class="example">
+			<aside>
 
 				<!-- Cut below this -->
 				<style>@import url("./css/viewer.css")</style>
@@ -138,11 +138,11 @@
 
 			</aside>
 		</section>
-		<section class="example rightExample clearfix">
-			<article class="example">
+		<section class="example example-right">
+			<article>
 				<p>This example shows a lens instead of zooming in on the whole image.</p>
 			</article>
-			<aside class="example">
+			<aside>
 
 				<!-- Cut below this -->
 				<style>@import url("./css/viewer.css")</style>
