--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<h2>Tile Based Image Viewer</h2>
 				<p>This tile-based image viewer loads only the parts of the image that are visible. Not unlike how Google Maps loads map tiles.</p>
 				<p>This demo comes with a web service to divide large images into tiles using PHP, but the concept is easily replicated in other languages.</p>
-				<p><a class="button downloadButton" href="http://www.woollymittens.nl/downloads/viewer.zip" target="_blank">Download</a></p>
+				<p><a class="button downloadButton" href="http://github.com/WoollyMittens/useful-viewer" target="_blank">Download (GitHub)</a></p>
 			</article>
 			<aside>
 
