--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 						handler : useful.viewer.start,
 						data : {
 							'urlprefix' : '../',
+							'queryprefix' : '?',
 							'imagesize' : './php/imagesize.php',
 							'imageslice' : './php/imageslice.php',
 							'width' : '100',
@@ -60,10 +61,10 @@
 							'height' : '512',
 							'heightUnit' : 'px',
 							'divide' : '80%',
-							'margin' : '2%',
-							'highlight' : 'Grey',
+							'margin' : '0%',
+							'highlight' : '#FF6A00',
 							'lens' : '0.5',
-							'toolbars' : 'buttons', 	// buttons | toolbar | sliders
+							'toolbars' : 'buttons', 	// buttons | toolbar | sliders | none
 							'zoom' : 'static', 			// static | lens
 							'spin' : 'slideshow', 		// rotation | slideshow | catalogue
 							'pan' : 'drag', 			// drag | hover
@@ -116,17 +117,18 @@
 						handler : useful.viewer.start,
 						data : {
 							'urlprefix' : '../',
+							'queryprefix' : '?',
 							'imagesize' : './php/imagesize.php',
 							'imageslice' : './php/imageslice.php',
 							'width' : '100',
 							'widthUnit' : '%',
 							'height' : '450',
 							'heightUnit' : 'px',
-							'divide' : '80%',
-							'margin' : '2%',
-							'highlight' : 'Grey',
+							'divide' : '100%',
+							'margin' : '0%',
+							'highlight' : '#FF6A00',
 							'lens' : '0.5',
-							'toolbars' : 'sliders', 	// buttons | toolbar | sliders
+							'toolbars' : 'sliders', 	// buttons | toolbar | sliders | none
 							'zoom' : 'static', 			// static | lens
 							'spin' : 'rotation', 		// rotation | slideshow | catalogue
 							'pan' : 'drag', 			// drag | hover
@@ -171,6 +173,7 @@
 						handler : useful.viewer.start,
 						data : {
 							'urlprefix' : '../',
+							'queryprefix' : '?',
 							'imagesize' : './php/imagesize.php',
 							'imageslice' : './php/imageslice.php',
 							'width' : '100',
@@ -178,10 +181,10 @@
 							'height' : '512',
 							'heightUnit' : 'px',
 							'divide' : '80%',
-							'margin' : '2%',
-							'highlight' : 'Grey',
+							'margin' : '0%',
+							'highlight' : '#FF6A00',
 							'lens' : '0.5',
-							'toolbars' : 'toolbar', 	// buttons | toolbar | sliders
+							'toolbars' : 'toolbar', 	// buttons | toolbar | sliders | none
 							'zoom' : 'lens', 			// static | lens
 							'spin' : 'slideshow', 		// rotation | slideshow | catalogue
 							'pan' : 'drag', 			// drag | hover
