--- a/index.html
+++ b/index.html
@@ -45,34 +45,36 @@
 						<li><a href="./img/photo_9a.jpg"><img title="Duis Aute" alt="Duis aute irure dolor" src="./img/photo_9.jpg" width="2560" height="1920"/></a></li>
 					</ul>
 				</div>
-				<script src="./js/useful.viewer.js"></script>
+				<script src="./js/viewer.min.js"></script>
 				<script>
 				//<!--
-					useful.css.select({
-						rule : '#viewera',
-						handler : useful.viewer.start,
-						data : {
-							'urlprefix' : '../',
-							'queryprefix' : '?',
-							'imagesize' : './php/imagesize.php',
-							'imageslice' : './php/imageslice.php',
-							'width' : '100',
-							'widthUnit' : '%',
-							'height' : '512',
-							'heightUnit' : 'px',
-							'divide' : '80%',
-							'margin' : '0%',
-							'highlight' : '#FF6A00',
-							'lens' : '0.5',
-							'toolbars' : 'buttons', 	// buttons | toolbar | sliders | none
-							'zoom' : 'static', 			// static | lens
-							'spin' : 'slideshow', 		// rotation | slideshow | catalogue
-							'pan' : 'drag', 			// drag | hover
-							'magnification' : '1.1',
-							'grid' : '256px',
-							'cache' : '32'
-						}
+					// create a new instance of the script
+					var viewera = new useful.Viewer( document.getElementById('viewera'), {
+						'urlprefix' : '../',
+						'queryprefix' : '?',
+						'imagesize' : './php/imagesize.php',
+						'imageslice' : './php/imageslice.php',
+						'width' : '100',
+						'widthUnit' : '%',
+						'height' : '512',
+						'heightUnit' : 'px',
+						'divide' : '80%',
+						'margin' : '0%',
+						'colorPassive' : '#ff6a00',
+						'colorActive' : '#d45800',
+						'colorHover' : '#ff9800',
+						'colorDisabled' : '#7f7f7f',
+						'lens' : '0.5',
+						'toolbars' : 'buttons', 	// buttons | toolbar | sliders | none
+						'zoom' : 'static', 			// static | lens
+						'spin' : 'slideshow', 		// rotation | slideshow | catalogue
+						'pan' : 'drag', 			// drag | hover
+						'magnification' : '1.1',
+						'grid' : '256px',
+						'cache' : '32'
 					});
+					// start the instance
+					viewera.start();
 				//-->
 				</script>
 				<!-- Cut above this -->
@@ -109,34 +111,36 @@
 						<li><a href="./img/rotation_0a.jpg"><img alt="" src="./img/rotation_0.jpg" width="2304" height="3072"/></a></li>
 					</ul>
 				</div>
-				<script src="./js/useful.viewer.js"></script>
+				<script src="./js/viewer.min.js"></script>
 				<script>
 				//<!--
-					useful.css.select({
-						rule : '#viewerc',
-						handler : useful.viewer.start,
-						data : {
-							'urlprefix' : '../',
-							'queryprefix' : '?',
-							'imagesize' : './php/imagesize.php',
-							'imageslice' : './php/imageslice.php',
-							'width' : '100',
-							'widthUnit' : '%',
-							'height' : '450',
-							'heightUnit' : 'px',
-							'divide' : '100%',
-							'margin' : '0%',
-							'highlight' : '#FF6A00',
-							'lens' : '0.5',
-							'toolbars' : 'sliders', 	// buttons | toolbar | sliders | none
-							'zoom' : 'static', 			// static | lens
-							'spin' : 'rotation', 		// rotation | slideshow | catalogue
-							'pan' : 'drag', 			// drag | hover
-							'magnification' : '1.1',
-							'grid' : '256px',
-							'cache' : '32'
-						}
+					// create a new instance of the script
+					var viewerc = new useful.Viewer( document.getElementById('viewerc'), {
+						'urlprefix' : '../',
+						'queryprefix' : '?',
+						'imagesize' : './php/imagesize.php',
+						'imageslice' : './php/imageslice.php',
+						'width' : '100',
+						'widthUnit' : '%',
+						'height' : '450',
+						'heightUnit' : 'px',
+						'divide' : '100%',
+						'margin' : '0%',
+						'colorPassive' : '#ff6a00',
+						'colorActive' : '#d45800',
+						'colorHover' : '#ff9800',
+						'colorDisabled' : '#7f7f7f',
+						'lens' : '0.5',
+						'toolbars' : 'sliders', 	// buttons | toolbar | sliders | none
+						'zoom' : 'static', 			// static | lens
+						'spin' : 'rotation', 		// rotation | slideshow | catalogue
+						'pan' : 'drag', 			// drag | hover
+						'magnification' : '1.1',
+						'grid' : '256px',
+						'cache' : '32'
 					});
+					// start the instance
+					viewerc.start();
 				//-->
 				</script>
 				<!-- Cut above this -->
@@ -165,34 +169,36 @@
 						<li><a href="./img/photo_0a.jpg"><img title="Lorem Ipsum" alt="Lorem ipsum dolor sit amet" src="./img/photo_0.jpg" width="4608" height="3456"/></a></li>
 					</ul>
 				</div>
-				<script src="./js/useful.viewer.js"></script>
+				<script src="./js/viewer.min.js"></script>
 				<script>
 				//<!--
-					useful.css.select({
-						rule : '#viewerb',
-						handler : useful.viewer.start,
-						data : {
-							'urlprefix' : '../',
-							'queryprefix' : '?',
-							'imagesize' : './php/imagesize.php',
-							'imageslice' : './php/imageslice.php',
-							'width' : '100',
-							'widthUnit' : '%',
-							'height' : '512',
-							'heightUnit' : 'px',
-							'divide' : '80%',
-							'margin' : '0%',
-							'highlight' : '#FF6A00',
-							'lens' : '0.5',
-							'toolbars' : 'toolbar', 	// buttons | toolbar | sliders | none
-							'zoom' : 'lens', 			// static | lens
-							'spin' : 'slideshow', 		// rotation | slideshow | catalogue
-							'pan' : 'drag', 			// drag | hover
-							'magnification' : '1.1',
-							'grid' : '256px',
-							'cache' : '32'
-						}
+					// create a new instance of the script
+					var viewerb = new useful.Viewer( document.getElementById('viewerb'), {
+						'urlprefix' : '../',
+						'queryprefix' : '?',
+						'imagesize' : './php/imagesize.php',
+						'imageslice' : './php/imageslice.php',
+						'width' : '100',
+						'widthUnit' : '%',
+						'height' : '512',
+						'heightUnit' : 'px',
+						'divide' : '80%',
+						'margin' : '0%',
+						'colorPassive' : '#ff6a00',
+						'colorActive' : '#d45800',
+						'colorHover' : '#ff9800',
+						'colorDisabled' : '#7f7f7f',
+						'lens' : '0.5',
+						'toolbars' : 'toolbar', 	// buttons | toolbar | sliders | none
+						'zoom' : 'lens', 			// static | lens
+						'spin' : 'slideshow', 		// rotation | slideshow | catalogue
+						'pan' : 'drag', 			// drag | hover
+						'magnification' : '1.1',
+						'grid' : '256px',
+						'cache' : '32'
 					});
+					// start the instance
+					viewerb.start();
 				//-->
 				</script>
 				<!-- Cut above this -->
