Delayed the script until the page is loaded.

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 						'cache' : '32'
 					});
 					// start the instance
-					viewera.start();
+					window.addEventListener('load', function () { viewera.start(); }, false);
 				//-->
 				</script>
 				<!-- Cut above this -->
@@ -140,7 +140,7 @@
 						'cache' : '32'
 					});
 					// start the instance
-					viewerc.start();
+					window.addEventListener('load', function () { viewerc.start(); }, false);
 				//-->
 				</script>
 				<!-- Cut above this -->
@@ -198,7 +198,7 @@
 						'cache' : '32'
 					});
 					// start the instance
-					viewerb.start();
+					window.addEventListener('load', function () { viewerb.start(); }, false);
 				//-->
 				</script>
 				<!-- Cut above this -->
