--- a/index.html
+++ b/index.html
@@ -70,7 +70,11 @@
 						'magnification' : '1.1',
 						'max' : '4',
 						'grid' : '256px',
-						'cache' : '32'
+						'cache' : '32',
+						'left' : 0,
+						'top' : 0,
+						'right' : 1,
+						'bottom' : 1
 					});
 					// start the instance
 					window.addEventListener('load', function () { viewera.start(); }, false);
@@ -135,7 +139,11 @@
 						'magnification' : '1.1',
 						'max' : '4',
 						'grid' : '256px',
-						'cache' : '32'
+						'cache' : '32',
+						'left' : 0,
+						'top' : 0,
+						'right' : 1,
+						'bottom' : 1
 					});
 					// start the instance
 					window.addEventListener('load', function () { viewerc.start(); }, false);
@@ -192,7 +200,11 @@
 						'magnification' : '1.1',
 						'max' : '4',
 						'grid' : '256px',
-						'cache' : '32'
+						'cache' : '32',
+						'left' : 0,
+						'top' : 0,
+						'right' : 1,
+						'bottom' : 1
 					});
 					// start the instance
 					window.addEventListener('load', function () { viewerb.start(); }, false);
