Switched to grunt.js for pre-processing.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8" />
-		<title>useful.viewer.js: Tile Based Image Viewer</title>
+		<title>useful-viewer.js: Tile Based Image Viewer</title>
 		<style>
 			html { font-family:Sans-Serif; font-size:75%; height:100%; }
 			body { _height:100%; line-height:180%; margin:0; min-height:100%; padding:1%; }
@@ -15,8 +15,8 @@
 			<meta http-equiv="imagetoolbar" content="no"/>
 			<meta http-equiv="X-UA-Compatible" content="IE=edge" />
             <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-			<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-			<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
+			<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.js"></script>
+			<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.js"></script>
 		<![endif]-->
 	</head>
 	<body>
@@ -30,7 +30,7 @@
 			<aside>
 
 				<!-- Cut below this -->
-				<style>@import url("./css/viewer.css")</style>
+				<style>@import url("./css/useful-viewer.css")</style>
 				<div id="viewera" class="viewer">
 					<ul>
 						<li><a href="./img/photo_0a.jpg"><img title="Lorem Ipsum" alt="Lorem ipsum dolor sit amet" src="./img/photo_0.jpg" width="4608" height="3456"/></a></li>
@@ -45,7 +45,7 @@
 						<li><a href="./img/photo_9a.jpg"><img title="Duis Aute" alt="Duis aute irure dolor" src="./img/photo_9.jpg" width="2560" height="1920"/></a></li>
 					</ul>
 				</div>
-				<script src="./js/viewer.min.js"></script>
+				<script src="./js/useful-viewer.js"></script>
 				<script>
 				//<!--
 					// create a new instance of the script
@@ -91,7 +91,7 @@
 			<aside>
 
 				<!-- Cut below this -->
-				<style>@import url("./css/viewer.css")</style>
+				<style>@import url("./css/useful-viewer.css")</style>
 				<div id="viewerc" class="viewer">
 					<ul>
 						<li><a href="./img/rotation_17a.jpg"><img alt="" src="./img/rotation_17.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
@@ -114,7 +114,7 @@
 						<li><a href="./img/rotation_0a.jpg"><img alt="" src="./img/rotation_0.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
 					</ul>
 				</div>
-				<script src="./js/viewer.min.js"></script>
+				<script src="./js/useful-viewer.js"></script>
 				<script>
 				//<!--
 					// create a new instance of the script
@@ -160,7 +160,7 @@
 			<aside>
 
 				<!-- Cut below this -->
-				<style>@import url("./css/viewer.css")</style>
+				<style>@import url("./css/useful-viewer.css")</style>
 				<div id="viewerb" class="viewer">
 					<ul>
 						<li><a href="./img/photo_9a.jpg"><img title="Duis Aute" alt="Duis aute irure dolor" src="./img/photo_9.jpg" width="2560" height="1920"/></a></li>
@@ -175,7 +175,7 @@
 						<li><a href="./img/photo_0a.jpg"><img title="Lorem Ipsum" alt="Lorem ipsum dolor sit amet" src="./img/photo_0.jpg" width="4608" height="3456"/></a></li>
 					</ul>
 				</div>
-				<script src="./js/viewer.min.js"></script>
+				<script src="./js/useful-viewer.js"></script>
 				<script>
 				//<!--
 					// create a new instance of the script
