Added more comprehensive build script

--- a/index.html
+++ b/index.html
@@ -30,28 +30,28 @@
 			<aside>
 
 				<!-- Cut below this -->
-				<style>@import url("./css/useful-viewer.css")</style>
+				<style>@import url("./inc/css/useful-viewer.css")</style>
 				<div id="viewera" class="viewer">
 					<ul>
-						<li><a href="./img/photo_0a.jpg"><img title="Lorem Ipsum" alt="Lorem ipsum dolor sit amet" src="./img/photo_0.jpg" width="4608" height="3456"/></a></li>
-						<li><a href="./img/photo_1a.jpg"><img title="Ut Enim" alt="Ut enim ad minim veniam" src="./img/photo_1.jpg" width="3456" height="4608"/></a></li>
-						<li><a href="./img/photo_2a.jpg"><img title="Duis Aute" alt="Duis aute irure dolor" src="./img/photo_2.jpg" width="4608" height="3456"/></a></li>
-						<li><a href="./img/photo_3a.jpg"><img title="Excepteur" alt="Excepteur sint occaecat" src="./img/photo_3.jpg" width="3456" height="4608"/></a></li>
-						<li><a href="./img/photo_4a.jpg"><img title="Lorem Ipsum" alt="Lorem ipsum dolor sit amet" src="./img/photo_4.jpg" width="4608" height="3456"/></a></li>
-						<li><a href="./img/photo_5a.jpg"><img title="Ut Enim" alt="Ut enim ad minim veniam" src="./img/photo_5.jpg" width="1932" height="2576"/></a></li>
-						<li><a href="./img/photo_6a.jpg"><img title="Duis Aute" alt="Duis aute irure dolor" src="./img/photo_6.jpg" width="2560" height="1920"/></a></li>
-						<li><a href="./img/photo_7a.jpg"><img title="Excepteur" alt="Excepteur sint occaecat" src="./img/photo_7.jpg" width="2560" height="1920"/></a></li>
-						<li><a href="./img/photo_8a.jpg"><img title="Ut Enim" alt="Ut enim ad minim veniam" src="./img/photo_8.jpg" width="1920" height="2560"/></a></li>
-						<li><a href="./img/photo_9a.jpg"><img title="Duis Aute" alt="Duis aute irure dolor" src="./img/photo_9.jpg" width="2560" height="1920"/></a></li>
+						<li><a href="./inc/img/photo_0a.jpg"><img title="Lorem Ipsum" alt="Lorem ipsum dolor sit amet" src="./inc/img/photo_0.jpg" width="4608" height="3456"/></a></li>
+						<li><a href="./inc/img/photo_1a.jpg"><img title="Ut Enim" alt="Ut enim ad minim veniam" src="./inc/img/photo_1.jpg" width="3456" height="4608"/></a></li>
+						<li><a href="./inc/img/photo_2a.jpg"><img title="Duis Aute" alt="Duis aute irure dolor" src="./inc/img/photo_2.jpg" width="4608" height="3456"/></a></li>
+						<li><a href="./inc/img/photo_3a.jpg"><img title="Excepteur" alt="Excepteur sint occaecat" src="./inc/img/photo_3.jpg" width="3456" height="4608"/></a></li>
+						<li><a href="./inc/img/photo_4a.jpg"><img title="Lorem Ipsum" alt="Lorem ipsum dolor sit amet" src="./inc/img/photo_4.jpg" width="4608" height="3456"/></a></li>
+						<li><a href="./inc/img/photo_5a.jpg"><img title="Ut Enim" alt="Ut enim ad minim veniam" src="./inc/img/photo_5.jpg" width="1932" height="2576"/></a></li>
+						<li><a href="./inc/img/photo_6a.jpg"><img title="Duis Aute" alt="Duis aute irure dolor" src="./inc/img/photo_6.jpg" width="2560" height="1920"/></a></li>
+						<li><a href="./inc/img/photo_7a.jpg"><img title="Excepteur" alt="Excepteur sint occaecat" src="./inc/img/photo_7.jpg" width="2560" height="1920"/></a></li>
+						<li><a href="./inc/img/photo_8a.jpg"><img title="Ut Enim" alt="Ut enim ad minim veniam" src="./inc/img/photo_8.jpg" width="1920" height="2560"/></a></li>
+						<li><a href="./inc/img/photo_9a.jpg"><img title="Duis Aute" alt="Duis aute irure dolor" src="./inc/img/photo_9.jpg" width="2560" height="1920"/></a></li>
 					</ul>
 				</div>
-				<script src="./js/useful-viewer.js"></script>
+				<script src="./inc/js/useful-viewer.js"></script>
 				<script>
 				//<!--
 					// create a new instance of the script
 					var viewera = new useful.Viewer( document.getElementById('viewera'), {
-						'urlprefix' : '../',
-						'imageslice' : './php/imageslice.php?src={src}&left={left}&top={top}&right={right}&bottom={bottom}&width={width}&height={height}',
+						'urlprefix' : '',
+						'imageslice' : 'inc/php/imageslice.php?src=../../{src}&left={left}&top={top}&right={right}&bottom={bottom}&width={width}&height={height}',
 						'width' : '100',
 						'widthUnit' : '%',
 						'height' : '512',
@@ -91,36 +91,36 @@
 			<aside>
 
 				<!-- Cut below this -->
-				<style>@import url("./css/useful-viewer.css")</style>
+				<style>@import url("./inc/css/useful-viewer.css")</style>
 				<div id="viewerc" class="viewer">
 					<ul>
-						<li><a href="./img/rotation_17a.jpg"><img alt="" src="./img/rotation_17.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
-						<li><a href="./img/rotation_16a.jpg"><img alt="" src="./img/rotation_16.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
-						<li><a href="./img/rotation_15a.jpg"><img alt="" src="./img/rotation_15.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
-						<li><a href="./img/rotation_14a.jpg"><img alt="" src="./img/rotation_14.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
-						<li><a href="./img/rotation_13a.jpg"><img alt="" src="./img/rotation_13.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
-						<li><a href="./img/rotation_12a.jpg"><img alt="" src="./img/rotation_12.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
-						<li><a href="./img/rotation_11a.jpg"><img alt="" src="./img/rotation_11.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
-						<li><a href="./img/rotation_10a.jpg"><img alt="" src="./img/rotation_10.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
-						<li><a href="./img/rotation_9a.jpg"><img alt="" src="./img/rotation_9.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
-						<li><a href="./img/rotation_8a.jpg"><img alt="" src="./img/rotation_8.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
-						<li><a href="./img/rotation_7a.jpg"><img alt="" src="./img/rotation_7.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
-						<li><a href="./img/rotation_6a.jpg"><img alt="" src="./img/rotation_6.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
-						<li><a href="./img/rotation_5a.jpg"><img alt="" src="./img/rotation_5.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
-						<li><a href="./img/rotation_4a.jpg"><img alt="" src="./img/rotation_4.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
-						<li><a href="./img/rotation_3a.jpg"><img alt="" src="./img/rotation_3.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
-						<li><a href="./img/rotation_2a.jpg"><img alt="" src="./img/rotation_2.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
-						<li><a href="./img/rotation_1a.jpg"><img alt="" src="./img/rotation_1.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
-						<li><a href="./img/rotation_0a.jpg"><img alt="" src="./img/rotation_0.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
+						<li><a href="./inc/img/rotation_17a.jpg"><img alt="" src="./inc/img/rotation_17.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
+						<li><a href="./inc/img/rotation_16a.jpg"><img alt="" src="./inc/img/rotation_16.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
+						<li><a href="./inc/img/rotation_15a.jpg"><img alt="" src="./inc/img/rotation_15.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
+						<li><a href="./inc/img/rotation_14a.jpg"><img alt="" src="./inc/img/rotation_14.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
+						<li><a href="./inc/img/rotation_13a.jpg"><img alt="" src="./inc/img/rotation_13.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
+						<li><a href="./inc/img/rotation_12a.jpg"><img alt="" src="./inc/img/rotation_12.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
+						<li><a href="./inc/img/rotation_11a.jpg"><img alt="" src="./inc/img/rotation_11.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
+						<li><a href="./inc/img/rotation_10a.jpg"><img alt="" src="./inc/img/rotation_10.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
+						<li><a href="./inc/img/rotation_9a.jpg"><img alt="" src="./inc/img/rotation_9.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
+						<li><a href="./inc/img/rotation_8a.jpg"><img alt="" src="./inc/img/rotation_8.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
+						<li><a href="./inc/img/rotation_7a.jpg"><img alt="" src="./inc/img/rotation_7.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
+						<li><a href="./inc/img/rotation_6a.jpg"><img alt="" src="./inc/img/rotation_6.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
+						<li><a href="./inc/img/rotation_5a.jpg"><img alt="" src="./inc/img/rotation_5.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
+						<li><a href="./inc/img/rotation_4a.jpg"><img alt="" src="./inc/img/rotation_4.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
+						<li><a href="./inc/img/rotation_3a.jpg"><img alt="" src="./inc/img/rotation_3.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
+						<li><a href="./inc/img/rotation_2a.jpg"><img alt="" src="./inc/img/rotation_2.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
+						<li><a href="./inc/img/rotation_1a.jpg"><img alt="" src="./inc/img/rotation_1.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
+						<li><a href="./inc/img/rotation_0a.jpg"><img alt="" src="./inc/img/rotation_0.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
 					</ul>
 				</div>
-				<script src="./js/useful-viewer.js"></script>
+				<script src="./inc/js/useful-viewer.js"></script>
 				<script>
 				//<!--
 					// create a new instance of the script
 					var viewerc = new useful.Viewer( document.getElementById('viewerc'), {
-						'urlprefix' : '../',
-						'imageslice' : './php/imageslice.php?src={src}&left={left}&top={top}&right={right}&bottom={bottom}&width={width}&height={height}',
+						'urlprefix' : '',
+						'imageslice' : 'inc/php/imageslice.php?src=../../{src}&left={left}&top={top}&right={right}&bottom={bottom}&width={width}&height={height}',
 						'width' : '100',
 						'widthUnit' : '%',
 						'height' : '450',
@@ -160,28 +160,28 @@
 			<aside>
 
 				<!-- Cut below this -->
-				<style>@import url("./css/useful-viewer.css")</style>
+				<style>@import url("./inc/css/useful-viewer.css")</style>
 				<div id="viewerb" class="viewer">
 					<ul>
-						<li><a href="./img/photo_9a.jpg"><img title="Duis Aute" alt="Duis aute irure dolor" src="./img/photo_9.jpg" width="2560" height="1920"/></a></li>
-						<li><a href="./img/photo_8a.jpg"><img title="Ut Enim" alt="Ut enim ad minim veniam" src="./img/photo_8.jpg" width="1920" height="2560"/></a></li>
-						<li><a href="./img/photo_7a.jpg"><img title="Excepteur" alt="Excepteur sint occaecat" src="./img/photo_7.jpg" width="2560" height="1920"/></a></li>
-						<li><a href="./img/photo_6a.jpg"><img title="Duis Aute" alt="Duis aute irure dolor" src="./img/photo_6.jpg" width="2560" height="1920"/></a></li>
-						<li><a href="./img/photo_5a.jpg"><img title="Ut Enim" alt="Ut enim ad minim veniam" src="./img/photo_5.jpg" width="1932" height="2576"/></a></li>
-						<li><a href="./img/photo_4a.jpg"><img title="Lorem Ipsum" alt="Lorem ipsum dolor sit amet" src="./img/photo_4.jpg" width="4608" height="3456"/></a></li>
-						<li><a href="./img/photo_3a.jpg"><img title="Excepteur" alt="Excepteur sint occaecat" src="./img/photo_3.jpg" width="3456" height="4608"/></a></li>
-						<li><a href="./img/photo_2a.jpg"><img title="Duis Aute" alt="Duis aute irure dolor" src="./img/photo_2.jpg" width="4608" height="3456"/></a></li>
-						<li><a href="./img/photo_1a.jpg"><img title="Ut Enim" alt="Ut enim ad minim veniam" src="./img/photo_1.jpg" width="3456" height="4608"/></a></li>
-						<li><a href="./img/photo_0a.jpg"><img title="Lorem Ipsum" alt="Lorem ipsum dolor sit amet" src="./img/photo_0.jpg" width="4608" height="3456"/></a></li>
+						<li><a href="./inc/img/photo_9a.jpg"><img title="Duis Aute" alt="Duis aute irure dolor" src="./inc/img/photo_9.jpg" width="2560" height="1920"/></a></li>
+						<li><a href="./inc/img/photo_8a.jpg"><img title="Ut Enim" alt="Ut enim ad minim veniam" src="./inc/img/photo_8.jpg" width="1920" height="2560"/></a></li>
+						<li><a href="./inc/img/photo_7a.jpg"><img title="Excepteur" alt="Excepteur sint occaecat" src="./inc/img/photo_7.jpg" width="2560" height="1920"/></a></li>
+						<li><a href="./inc/img/photo_6a.jpg"><img title="Duis Aute" alt="Duis aute irure dolor" src="./inc/img/photo_6.jpg" width="2560" height="1920"/></a></li>
+						<li><a href="./inc/img/photo_5a.jpg"><img title="Ut Enim" alt="Ut enim ad minim veniam" src="./inc/img/photo_5.jpg" width="1932" height="2576"/></a></li>
+						<li><a href="./inc/img/photo_4a.jpg"><img title="Lorem Ipsum" alt="Lorem ipsum dolor sit amet" src="./inc/img/photo_4.jpg" width="4608" height="3456"/></a></li>
+						<li><a href="./inc/img/photo_3a.jpg"><img title="Excepteur" alt="Excepteur sint occaecat" src="./inc/img/photo_3.jpg" width="3456" height="4608"/></a></li>
+						<li><a href="./inc/img/photo_2a.jpg"><img title="Duis Aute" alt="Duis aute irure dolor" src="./inc/img/photo_2.jpg" width="4608" height="3456"/></a></li>
+						<li><a href="./inc/img/photo_1a.jpg"><img title="Ut Enim" alt="Ut enim ad minim veniam" src="./inc/img/photo_1.jpg" width="3456" height="4608"/></a></li>
+						<li><a href="./inc/img/photo_0a.jpg"><img title="Lorem Ipsum" alt="Lorem ipsum dolor sit amet" src="./inc/img/photo_0.jpg" width="4608" height="3456"/></a></li>
 					</ul>
 				</div>
-				<script src="./js/useful-viewer.js"></script>
+				<script src="./inc/js/useful-viewer.js"></script>
 				<script>
 				//<!--
 					// create a new instance of the script
 					var viewerb = new useful.Viewer( document.getElementById('viewerb'), {
-						'urlprefix' : '../',
-						'imageslice' : './php/imageslice.php?src={src}&left={left}&top={top}&right={right}&bottom={bottom}&width={width}&height={height}',
+						'urlprefix' : '',
+						'imageslice' : 'inc/php/imageslice.php?src=../../{src}&left={left}&top={top}&right={right}&bottom={bottom}&width={width}&height={height}',
 						'width' : '100',
 						'widthUnit' : '%',
 						'height' : '512',
