Reduced reliance on typography.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<aside>
 
 				<!-- Cut below this -->
-				<style>@import url("./inc/css/useful-viewer.css")</style>
+				<style>@import url("./inc/css/useful-viewer.css");</style>
 				<div id="viewera" class="viewer">
 					<ul>
 						<li><a href="./inc/img/photo_0a.jpg"><img title="Lorem Ipsum" alt="Lorem ipsum dolor sit amet" src="./inc/img/photo_0.jpg" width="4608" height="3456"/></a></li>
@@ -89,28 +89,24 @@
 			<aside>
 
 				<!-- Cut below this -->
-				<style>@import url("./inc/css/useful-viewer.css")</style>
+				<style>@import url("./inc/css/useful-viewer.css");</style>
 				<div id="viewerc" class="viewer">
 					<ul>
-						<li><a href="./inc/img/rotation_17a.jpg"><img alt="" src="./inc/img/rotation_17.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
-						<li><a href="./inc/img/rotation_16a.jpg"><img alt="" src="./inc/img/rotation_16.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
-						<li><a href="./inc/img/rotation_15a.jpg"><img alt="" src="./inc/img/rotation_15.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
-						<li><a href="./inc/img/rotation_14a.jpg"><img alt="" src="./inc/img/rotation_14.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
-						<li><a href="./inc/img/rotation_13a.jpg"><img alt="" src="./inc/img/rotation_13.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
-						<li><a href="./inc/img/rotation_12a.jpg"><img alt="" src="./inc/img/rotation_12.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
-						<li><a href="./inc/img/rotation_11a.jpg"><img alt="" src="./inc/img/rotation_11.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
-						<li><a href="./inc/img/rotation_10a.jpg"><img alt="" src="./inc/img/rotation_10.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
-						<li><a href="./inc/img/rotation_9a.jpg"><img alt="" src="./inc/img/rotation_9.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
-						<li><a href="./inc/img/rotation_8a.jpg"><img alt="" src="./inc/img/rotation_8.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
-						<li><a href="./inc/img/rotation_7a.jpg"><img alt="" src="./inc/img/rotation_7.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
-						<li><a href="./inc/img/rotation_6a.jpg"><img alt="" src="./inc/img/rotation_6.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
-						<li><a href="./inc/img/rotation_5a.jpg"><img alt="" src="./inc/img/rotation_5.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
-						<li><a href="./inc/img/rotation_4a.jpg"><img alt="" src="./inc/img/rotation_4.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
-						<li><a href="./inc/img/rotation_3a.jpg"><img alt="" src="./inc/img/rotation_3.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
-						<li><a href="./inc/img/rotation_2a.jpg"><img alt="" src="./inc/img/rotation_2.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
-						<li><a href="./inc/img/rotation_1a.jpg"><img alt="" src="./inc/img/rotation_1.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
-						<li><a href="./inc/img/rotation_0a.jpg"><img alt="" src="./inc/img/rotation_0.jpg" data-left="0" data-top="0.2" data-right="1" data-bottom="0.9" width="2304" height="3072"/></a></li>
-					</ul>
+						<li><a href="./inc/img/panorama_0a.jpg"><img alt="" src="./inc/img/panorama_0.jpg" data-left="0" data-top="0" data-right="1" data-bottom="1" width="1932" height="2576"/></a></li>
+						<li><a href="./inc/img/panorama_1a.jpg"><img alt="" src="./inc/img/panorama_1.jpg" data-left="0" data-top="0" data-right="1" data-bottom="1" width="1932" height="2576"/></a></li>
+						<li><a href="./inc/img/panorama_2a.jpg"><img alt="" src="./inc/img/panorama_2.jpg" data-left="0" data-top="0" data-right="1" data-bottom="1" width="1932" height="2576"/></a></li>
+						<li><a href="./inc/img/panorama_3a.jpg"><img alt="" src="./inc/img/panorama_3.jpg" data-left="0" data-top="0" data-right="1" data-bottom="1" width="1932" height="2576"/></a></li>
+						<li><a href="./inc/img/panorama_4a.jpg"><img alt="" src="./inc/img/panorama_4.jpg" data-left="0" data-top="0" data-right="1" data-bottom="1" width="1932" height="2576"/></a></li>
+						<li><a href="./inc/img/panorama_5a.jpg"><img alt="" src="./inc/img/panorama_5.jpg" data-left="0" data-top="0" data-right="1" data-bottom="1" width="1932" height="2576"/></a></li>
+						<li><a href="./inc/img/panorama_6a.jpg"><img alt="" src="./inc/img/panorama_6.jpg" data-left="0" data-top="0" data-right="1" data-bottom="1" width="1932" height="2576"/></a></li>
+						<li><a href="./inc/img/panorama_7a.jpg"><img alt="" src="./inc/img/panorama_7.jpg" data-left="0" data-top="0" data-right="1" data-bottom="1" width="1932" height="2576"/></a></li>
+						<li><a href="./inc/img/panorama_8a.jpg"><img alt="" src="./inc/img/panorama_8.jpg" data-left="0" data-top="0" data-right="1" data-bottom="1" width="1932" height="2576"/></a></li>
+						<li><a href="./inc/img/panorama_9a.jpg"><img alt="" src="./inc/img/panorama_9.jpg" data-left="0" data-top="0" data-right="1" data-bottom="1" width="1932" height="2576"/></a></li>
+						<li><a href="./inc/img/panorama_10a.jpg"><img alt="" src="./inc/img/panorama_10.jpg" data-left="0" data-top="0" data-right="1" data-bottom="1" width="1932" height="2576"/></a></li>
+						<li><a href="./inc/img/panorama_11a.jpg"><img alt="" src="./inc/img/panorama_11.jpg" data-left="0" data-top="0" data-right="1" data-bottom="1" width="1932" height="2576"/></a></li>
+						<li><a href="./inc/img/panorama_12a.jpg"><img alt="" src="./inc/img/panorama_12.jpg" data-left="0" data-top="0" data-right="1" data-bottom="1" width="1932" height="2576"/></a></li>
+						<li><a href="./inc/img/panorama_13a.jpg"><img alt="" src="./inc/img/panorama_13.jpg" data-left="0" data-top="0" data-right="1" data-bottom="1" width="1932" height="2576"/></a></li>
+						<li><a href="./inc/img/panorama_14a.jpg"><img alt="" src="./inc/img/panorama_14.jpg" data-left="0" data-top="0" data-right="1" data-bottom="1" width="1932" height="2576"/></a></li>					
 				</div>
 				<script src="./inc/js/useful-viewer.js"></script>
 				<script>
@@ -121,7 +117,7 @@
 						'imageslice' : 'inc/php/imageslice.php?src=../../{src}&left={left}&top={top}&right={right}&bottom={bottom}&width={width}&height={height}',
 						'width' : '100',
 						'widthUnit' : '%',
-						'height' : '450',
+						'height' : '610',
 						'heightUnit' : 'px',
 						'divide' : '100%',
 						'margin' : '0%',
@@ -156,7 +152,7 @@
 			<aside>
 
 				<!-- Cut below this -->
-				<style>@import url("./inc/css/useful-viewer.css")</style>
+				<style>@import url("./inc/css/useful-viewer.css");</style>
 				<div id="viewerb" class="viewer">
 					<ul>
 						<li><a href="./inc/img/photo_9a.jpg"><img title="Duis Aute" alt="Duis aute irure dolor" src="./inc/img/photo_9.jpg" width="2560" height="1920"/></a></li>
